src/app/blog/_components/notion.css
.notion-app {
    background-color: transparent !important;
    min-height: none !important;
    width: 100%;
}

.notion-full-page {
    padding-bottom: calc(max(8vh, 90px)) !important;
    transition: translate 0.3s ease-in-out !important;
}

@media (width >= 1000px) {
    .notion-full-page {
        translate: -8.6rem 0 !important;
    }

    .notion-aside {
        display: block !important;
    }
}

.notion-page-icon-hero {
    left: 4rem !important;
}

.notion-aside {
    padding-left: min(2rem, 2%) !important;
    align-items: flex-start !important;
    width: fit-content !important;
    max-width: 15.5rem !important;
}

.notion-aside-table-of-contents {
    background-color: transparent !important;
    align-items: flex-start !important;
    max-width: 15rem !important;
}

.notion-table-of-contents-item {
    white-space: pre-wrap !important;
    line-height: 1.3 !important;
    padding-left: calc(1rem + 8px) !important;
    text-indent: -1rem !important;
}

.notion-aside-table-of-contents-header {
    display: none !important;
}

a.notion-table-of-contents-active-item {
    color: #3c59a8 !important;
    font-weight: 500 !important;
}

@media (prefers-color-scheme: dark) {
    a.notion-table-of-contents-active-item {
        color: #afc0ee !important;
    }

    a.notion-table-of-contents-item {
        color: #bcbec5;
    }

    .notion {
        color: var(--foreground) !important;
    }

    .notion-inline-code {
        background-color: rgba(107, 105, 100, 0.257) !important;
        color: #eb5757ea !important;
    }

    .notion-blue{
        color: #88c8f9 !important;
    }

    td {
        border: 1px solid var(--accent) !important;
    }

    :not(pre) > code[class*="language-"],
    pre[class*="language-"] {
        background: var(--card) !important;
    }

    .notion-code-copy-button {
        background-color: var(--muted) !important;
        color: var(--foreground) !important;
        box-shadow: none !important;
    }

    .notion-external-title, 
    .notion-link-mention-title, 
    .notion-link-mention-preview-title,
    .notion-preview-card-title, 
    .notion-external-subtitle-item{
        color: var(--foreground) !important;
    }

    .notion-external-block-desc, 
    .notion-link-mention-provider, 
    .notion-link-mention-preview-description, 
    .notion-preview-card-domain{
        color: var(--color-muted-foreground) !important;
    }

    .notion-external-image{
        filter: invert(0.9) !important;
    }
}

@media (width >= 1000px) and (height >= 300px) {
    .notion-page-content-has-aside {
        width: 61rem !important;
        max-width: 61rem !important;
        flex-direction: row !important;
        display: flex !important;
        justify-content: space-between !important;
    }
    .notion-page-content-inner {
        width: 100% !important;
        max-width: 44rem !important;
    }
}

